--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
 url = "2.4"
+chrono = { version = "0.4", features = ["serde"] }
+axum = "0.7"
+tower-http = { version = "0.5", features = ["cors"] }
